[package]
name = "quick-kv"
description = "A fast and minimal key-value database."
version = "0.2.4"
edition = "2021"
repository = "https://github.com/ThatGuyJamal/quick-kv"
documentation = "https://docs.rs/quick-kv"
publish = true
resolver = "2"

authors = ["ThatGuyJamal <thatguyjamalbiz@gmai.com>"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/", "examples/"]
readme = "README.md"

categories = ["database", "caching"]
license = "MIT"

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }

# Deps for the full feature
rayon = { version = "1.8.0", optional = true }
simple_logger = { version = "4.2.0", optional = true, features = ["threads", "colored"] }
time = { version = "^0.3.29", features = [], optional = true }
log = { version = "0.4.20", optional = true }
hashbrown = { version = "0.14.1", features = ["serde", "rayon"] ,optional = true }
once_cell =  { version = "1.18.0", optional = true}

[dev-dependencies]
tempfile = "3.8.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
full = ["rayon", "simple_logger", "time", "log", "hashbrown", "once_cell"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"
required-features = ["full"]

[[bench]]
name = "mini-client"
harness = false
path = "benches/mini-client.rs"

[[bench]]
name = "client"
harness = false
path = "benches/client.rs"
required-features = ["full"]
