[package]
name = "quick-kv"
description = "A reliable key-value storage for modern software"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/ThatGuyJamal/quick-kv"
documentation = "https://docs.rs/quick-kv"
resolver = "2"
publish = true

authors = ["ThatGuyJamal <thatguyjamalbiz@gmai.com>"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/", "examples/", "bin/"]
readme = "./README.md"

categories = ["database", "caching"]
license = "MIT"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
rayon = { version = "1.8.0" }
simple_logger = { version = "4.2.0", features = ["colored"] }
time = { version = "^0.3.29" }
log = { version = "0.4.21" }
anyhow = "1.0.75"
rustc-hash = "1.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[[example]]
name = "memory"
path = "./examples/memory.rs"

[[example]]
name = "guessing_game"
path = "./examples/guessing_game.rs"

[profile.dev]
opt-level = 1   # Make debug builds run faster
panic = "abort" # This leads to better optimizations and smaller binaries.

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2

[profile.release]
# debug = true # good for profilers
panic = "abort" # This leads to better optimizations and smaller binaries.

[[bin]]
name = "cli"
path = "./bin/cli.rs"
