[package]
name = "quick-kv-cli"
description = "The CLI for quick-kv"
version = "0.0.0"
edition = "2021"
authors = ["ThatGuyJamal <thatguyjamalbiz@gmai.com>"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/", "examples/"]
readme = "README.md"
categories = ["database", "cli"]
license = "MIT"
publish = true

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
quick-kv = { version = "0.2.5", features = ["full"] }
