[package]
name = "quick-kv"
description = "An offline Key-Value Database"
version = "0.2.5"
edition = "2021"
repository = "https://github.com/ThatGuyJamal/quick-kv"
documentation = "https://docs.rs/quick-kv"

publish = true
resolver = "2"

authors = ["ThatGuyJamal <thatguyjamalbiz@gmai.com>"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/", "examples/"]
readme = "README.md"

categories = ["database", "caching"]
license = "MIT"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
rayon = { version = "1.8.0" }
simple_logger = { version = "4.2.0", features = ["colored"] }
time = { version = "^0.3.29" }
log = { version = "0.4.20" }
anyhow = "1.0.75"
rustc-hash = "1.1.0"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
